## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

drawtop_includedir = $(pkgincludedir)

drawtop_include_DATA = \
	drawtop.h\
	drawtop_bonjour.h\
	vpclient.h

EXTRA_DIST = $(drawtop_include_DATA)
