## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

vncproxy_includedir = $(pkgincludedir)

vncproxy_include_DATA = \
	bonjour_browser.h\
	vncproxy.h\
	service_handler.h\
	UIManager.h\
	dialogPassword.hh\
	dialogPassword_glade.hh\
	wndMain.hh\
	wndMain_glade.hh\
	pointer.h                        \
	vp.h 

EXTRA_DIST = $(vncproxy_include_DATA)
